# SAAS

./: .easignore  .env.example  .env.production.example  .gitignore  .mcp.json  .npmrc  .prettierignore  .prettierrc.json  AUDIT_REPORT.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  bootstrap-server.sh  deploy-docker.sh  deploy.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  verify-deployment.sh
.claude/: settings.json  settings.local.json
.claude/memory/: MEMORY.md  README.md  auth_strategy.md  (+7 more)
.github/: CODEOWNERS  pull_request_template.md
apps/web-clinic/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
apps/web-clinic/src-tauri/capabilities/: default.json
apps/web-clinic/src-tauri/icons/: icon.icns
apps/web-clinic/src-tauri/resources/: .gitignore  README.md
apps/web-clinic/src-tauri/src/: agent.rs  lib.rs  main.rs  printing.rs
docs/: DEPLOY-SMOKE-CHECKLIST.md  DEPLOY-v1.2.md  PRODUCTION-CHECKLIST.md  README.md
scripts/: apply-lab-migrations.sh  deploy.sh  i18n-audit.mjs  i18n-fill.mjs  publish-mobile-build.mjs  publish-mobile-version.mjs  remediate-blank-patient-names.sql  seed-demo-data.mjs  seed-dev-rich.mjs  seed-dev-users.mjs  seed-nurse-test.mjs  test-5175.ps1  test-clinic-login.ps1  test-login.ps1  test-web.ps1
supabase/: config.toml  manual-apply-backfill-ghost-profiles.sql  manual-apply-billing-flow.sql  manual-apply-diagnostic-equipment-name-fix.sql  manual-apply-expense-void.sql  manual-apply-inpatient-charge-tz.sql  manual-apply-lab-faza2.sql  manual-apply-lab-faza3.sql  manual-apply-payroll-fixed-monthly.sql  manual-apply-plan-names.sql  manual-apply-plan-pricing-uzs.sql  manual-apply-plans-yearly.sql  manual-apply-receipt-printer.sql  manual-apply-sla-notifications.sql  manual-apply-sprint1.sql  manual-apply-sprint2a.sql  manual-apply-sprint2b.sql  manual-apply-sprint2c.sql  manual-apply-telegram-printers.sql  manual-apply-trial-once.sql  manual-apply-v1.sql  package.json  seed.sql
(+751 files in other folders)
